--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
                 
             ],
             "all_frames": true,
-            "js": ["jquery-3.5.1.min.js", "content.js"],
+            "js": ["dependencies/jquery-3.5.1.min.js", "content.js"],
             "run_at": "document_end"
             
 
@@ -29,6 +29,6 @@
     ],
     "manifest_version": 2,
     "icons": {
-        "128": "icon128.png"
+        "128": "images/icon128.png"
     }
 }
