--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,14 +5,14 @@
     "description": "Provides a rating on how likely a video is to be react safe!",
     "options_page": "options.html",
     "permissions": ["activeTab", "storage", "identity"],
-    "web_accessible_resources": ["images/*.png"],
+    "web_accessible_resources": ["*.png"],
     "background": {
-        "scripts": ["background.js"],
+        "scripts": ["background.bundle.js"],
         "persistent": true
-      },
+    },
     
     "browser_action": {
-      "default_popup": "popup.html"
+        "default_popup": "popup.html"
     },
     "content_scripts": [
         {
@@ -21,7 +21,7 @@
                 
             ],
             "all_frames": true,
-            "js": ["dependencies/jquery-3.5.1.min.js", "content.js"],
+            "js": ["content.bundle.js"],
             "run_at": "document_end"
             
 
@@ -29,6 +29,6 @@
     ],
     "manifest_version": 2,
     "icons": {
-        "128": "images/icon128.png"
+        "128": "/icon128.png"
     }
 }
