--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Not me :)",
   "license": "MIT",
   "scripts": {
-    "build": "node utils/build.js",
-    "start": "node utils/webserver.js"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
@@ -27,8 +27,7 @@
     "stylelint-config-standard": "^20.0.0",
     "webpack": "^5.3.0",
     "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0",
-    "write-file-webpack-plugin": "^4.5.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
