Corrected some details in package.json

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "TwitchTOS",
   "version": "1.0.0",
   "description": "TODO",
-  "repository": "git@github.com:ohmree/TwitchTOS.git",
-  "author": "Not me :)",
+  "repository": "git@github.com:Pentalex/TwitchTOS.git",
+  "author": "Pentalex",
   "license": "MIT",
   "scripts": {
     "build": "webpack",
