--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
@@ -22,6 +23,7 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
+    "stylelint": ">=10.1.0",
     "stylelint-config-standard": "^20.0.0",
     "webpack": "^5.3.0",
     "webpack-cli": "^4.1.0",
