--- a/package.json
+++ b/package.json
@@ -7,21 +7,28 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "fix": "eslint --ignore-path .gitignore . --fix"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "husky": "^4.3.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.2.0",
     "fs-extra": "^9.0.1",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "prettier": "^2.1.2",
     "style-loader": "^2.0.0",
     "stylelint": ">=10.1.0",
     "stylelint-config-standard": "^20.0.0",
@@ -31,5 +38,10 @@
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn fix"
+    }
   }
 }
