--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
             "args": "after-used",
             "argsIgnorePattern": "^_"
         }],
+        "prefer-const": "error",
+        "no-var": "error",
         "prettier/prettier": "error"
     },
     "plugins": ["prettier"]
