--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^9.0.1",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.0.0-alpha.7",
     "prettier": "^2.1.2",
     "style-loader": "^2.0.0",
     "stylelint": ">=10.1.0",
     "stylelint-config-standard": "^20.0.0",
     "webpack": "^5.3.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.1.0"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
