--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "bootswatch": "^4.5.3",
     "husky": "^4.3.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
