Added Twitch badges and leveling/xp system

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
     "content_scripts": [
         {
             "matches": [
-                "*://*.youtube.com/*"
+                "*://*.youtube.com/*", "*://*.twitch.tv/*"
                 
             ],
             "all_frames": true,
