It's build, not dist

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
         uses: thedoctor0/zip-release@master
         with:
           filename: 'TwitchTOS.zip'
-          path: dist
+          path: build
