--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Releases
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
+# events but only for tags
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    tags: 
+    - '*'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -31,8 +29,13 @@ jobs:
           args: build
         env:
           NODE_ENVIRONMENT: production
-      - name: Archive and publish release
+      - name: Archive release
         uses: thedoctor0/zip-release@master
         with:
           filename: 'TwitchTOS.zip'
           path: build
+      - name: Publish release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "TwitchTOS.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
