--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "webpack-cli": "^4.1.0"
     },
     "lint-staged": {
-        "src/js/*.js": "eslint . --fix",
+        "src/js/*.js": "eslint . --ignore-path .gitignore --fix",
         "src/css/*.css": "stylelint --fix"
 
     },
