--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "style-loader": "^2.0.0",
         "stylelint": ">=10.1.0",
         "stylelint-config-standard": "^20.0.0",
+        "webextension-polyfill": "^0.6.0",
         "webpack": "^5.3.0",
         "webpack-cli": "^4.1.0"
     },
