--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
         "fix": "eslint --ignore-path .gitignore . --fix && stylelint 'src/css/*.css' --fix"
     },
     "dependencies": {
+        "@popperjs/core": "^2.5.4",
+        "@sweetalert2/themes": "^4.0.1",
         "bootstrap": "^4.1.3",
         "bootswatch": "^4.5.3",
         "jquery": "^3.5.1",
-        "popper.js": "^1.16.1"
+        "popper.js": "^1.16.1",
+        "sweetalert2": "^10.11.0",
+        "tippy.js": "^6.2.7"
     },
     "devDependencies": {
         "babel-eslint": "^10.1.0",
